# PasswordManager

./: .gitignore  CMakeLists.txt
data/: sample.json  sample.txt
src/: App.cpp  App.h  Categories.cpp  Categories.h  Category.cpp  Entry.cpp  Entry.h  File.cpp  File.h  Manager.cpp  Manager.h  Utils.cpp  Utils.h  main.cpp
